add-font-family

--- a/index.html
+++ b/index.html
@@ -46,50 +46,32 @@
                                         <ul class="list-unstyled pt-5">
                                             <li class="py-lg-3 py-2 overflow-hidden">
                                                 <span class="d-inline-block section-1">
-                                                    <a href="#home" class="overlay-links text-white ">Home</a>
+                                                    <a href="#home" class="overlay-links text-white ">My Profile</a>
                                                 </span>
                                             </li>
                                             <li class="py-lg-3 py-2 overflow-hidden">
                                                 <span class="d-inline-block section-2">
-                                                    <a href="#project" class="overlay-links text-white">About
+                                                    <a href="#project" class="overlay-links text-white">Explore
                                                         us</a>
                                                 </span>
                                             </li>
                                             <li class="py-lg-3 py-2 overflow-hidden">
                                                 <span class="d-inline-block section-3">
-                                                    <a href="#utilities" class="overlay-links text-white">How
+                                                    <a href="#utilities" class="overlay-links text-white">News
                                                         to works</a>
                                                 </span>
                                             </li>
                                             <li class="py-lg-3 py-2 overflow-hidden">
                                                 <span class="d-inline-block section-4">
-                                                    <a href="#roadmap" class="overlay-links text-white">Enter
+                                                    <a href="#roadmap" class="overlay-links text-white">Activity
                                                         raffle</a>
                                                 </span>
                                             </li>
-
-                                            <li class="py-lg-3 py-2 overflow-hidden">
-                                                <span class="d-inline-block section-5">
-                                                    <a href="#team" class="overlay-links text-white ">Watch
-                                                        list</a>
-                                                </span>
-                                            </li>
-                                            <li class="py-lg-3 py-2 overflow-hidden">
-                                                <span class="d-inline-block section-6">
-                                                    <a href="#faq" class="overlay-links text-white ">Team</a>
-                                                </span>
-                                            </li>
-                                            <li class="py-lg-3 py-2 overflow-hidden">
-                                                <span class="d-inline-block section-7">
-                                                    <a href="#faq" class="overlay-links text-white ">FAQs</a>
-                                                </span>
-                                            </li>
-
                                             <li class="py-lg-3 pb-4 overflow-hidden mt-3">
-                                                <span class="d-inline-block section-8 d-md-none">
+                                                <span class="d-inline-block section-5 d-md-none">
                                                     <button class="common-btn border-0 py-2 py-sm-1 px-3  text-white  
                                                         align-items-center">
-                                                        Connect Wallet
+                                                        SIGN IN
                                                     </button>
                                                 </span>
                                             </li>
@@ -102,48 +84,35 @@
                     <div class="container container-lg-fluid navbar-container">
                         <div class="d-flex justify-content-between align-items-center text-nowrap">
                             <a href="#">
-                                <img class="nav-logo" src="./assets/images/svg/chrono-logo.svg" alt="logo" /> </a>
+                                <img class="nav-logo" src="./assets/images/svg/navlogo.svg" alt="logo" /> </a>
                             <div class="nav-items-wrap d-none d-xl-block d-flex">
                                 <ul class="nav-items-list list-unstyled align-items-center d-flex m-auto">
                                     <li class="n-item pe-3 nav-links-active">
-                                        <a href="#home" class="nav-links ">Home</a>
+                                        <a href="#home" class="nav-links ">My Profile</a>
                                     </li>
                                     <li class="n-item px-xl-4 px-2 px-xxl-2">
-                                        <a class="nav-links  opacity-07" href="#about">About us</a>
+                                        <a class="nav-links  opacity-07" href="#about">Explore</a>
                                     </li>
-                                    <li class="n-item px-xl-3 px-2">
-                                        <a href="#how-to" class="nav-links  opacity-07">How to works</a>
+                                    <li class="n-item px-xl-4 px-2">
+                                        <a href="#how-to" class="nav-links  opacity-07">News</a>
                                     </li>
-                                    <li class="n-item px-xl-3 px-2">
-                                        <a href="#enter" class="nav-links  opacity-07">Enter raffle</a>
+                                    <li class="n-item ps-4 me-4 pe-5">
+                                        <a href="#enter" class="nav-links  opacity-07">Activity</a>
                                     </li>
+                                    <div class="nav-quantum d-flex justify-content-between align-items-center">
+                                        <div class="n-item px-xxl-3   d-flex align-items-center">
+                                            <button
+                                                class="common-btn border-0 rounded-pill py-2 px-4 text-white bg-color-black d-flex align-items-center d-none d-md-block">
+                                                SIGN IN
+                                            </button>
+                                        </div>
 
-                                    <li class="n-item px-xl-3 px-2">
-                                        <a href="#watch-list" class="nav-links  opacity-07">Watch list
-                                        </a>
-                                    </li>
+                                        <!-- Toggle Button nav -->
 
-                                    <li class="n-item px-xl-3 px-2">
-                                        <a href="#team" class="nav-links  opacity-07">Team</a>
-                                    </li>
-                                    <li class="n-item px-xl-3 px-2">
-                                        <a href="#faq" class="nav-links  opacity-07">FAQs</a>
-                                    </li>
+                                    </div>
                                 </ul>
                             </div>
-                            <div class="nav-quantum d-flex justify-content-between align-items-center">
 
-                                <div class="n-item px-xxl-3   d-flex align-items-center">
-
-                                    <button
-                                        class="common-btn border-0 py-3 px-32 text-white d-flex align-items-center d-none d-md-block">
-                                        Connect Wallet
-                                    </button>
-                                </div>
-
-                                <!-- Toggle Button nav -->
-
-                            </div>
 
                             <div id="main-menu" class="hamburger-menu d-inline-block d-xl-none">
                                 <span class="first"></span>
