--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                             </li>
                                             <li class="py-lg-3 pb-4 overflow-hidden mt-3">
                                                 <span class="d-inline-block section-5 d-md-none">
-                                                    <button class="common-btn border-0 py-2 py-sm-1 px-3  text-white  
+                                                    <button class="common-btn border-0 rounded-pill pt-2 px-4 text-white bg-color-black  text-white  
                                                         align-items-center">
                                                         SIGN IN
                                                     </button>
@@ -85,33 +85,41 @@
                         <div class="d-flex justify-content-between align-items-center text-nowrap">
                             <a href="#">
                                 <img class="nav-logo" src="./assets/images/svg/navlogo.svg" alt="logo" /> </a>
-                            <div class="nav-items-wrap d-none d-xl-block d-flex">
-                                <ul class="nav-items-list list-unstyled align-items-center d-flex m-auto">
-                                    <li class="n-item pe-3 nav-links-active">
-                                        <a href="#home" class="nav-links ">My Profile</a>
-                                    </li>
-                                    <li class="n-item px-xl-4 px-2 px-xxl-2">
-                                        <a class="nav-links  opacity-07" href="#about">Explore</a>
-                                    </li>
-                                    <li class="n-item px-xl-4 px-2">
-                                        <a href="#how-to" class="nav-links  opacity-07">News</a>
-                                    </li>
-                                    <li class="n-item ps-4 me-4 pe-5">
-                                        <a href="#enter" class="nav-links  opacity-07">Activity</a>
-                                    </li>
-                                    <div class="nav-quantum d-flex justify-content-between align-items-center">
-                                        <div class="n-item px-xxl-3   d-flex align-items-center">
-                                            <button
-                                                class="common-btn border-0 rounded-pill py-2 px-4 text-white bg-color-black d-flex align-items-center d-none d-md-block">
-                                                SIGN IN
-                                            </button>
+
+                            <div class="d-flex">
+                                <div class="search-input rounded-pill p-2 d-flex  me-sm-5">
+                                    <img src="./assets/images/svg/search.svg" alt="img">
+                                    <input class="border-0 ps-2 w-100" placeholder="Search..." type="text">
+                                </div>
+                                <div class="nav-items-wrap d-none d-xl-block d-flex ms-3">
+                                    <ul class="nav-items-list list-unstyled align-items-center d-flex m-auto">
+                                        <li class="n-item pe-3 nav-links-active">
+                                            <a href="#home" class="nav-links ">My Profile</a>
+                                        </li>
+                                        <li class="n-item px-xl-4 px-2 px-xxl-2">
+                                            <a class="nav-links  opacity-07" href="#about">Explore</a>
+                                        </li>
+                                        <li class="n-item px-xl-4 px-2">
+                                            <a href="#how-to" class="nav-links  opacity-07">News</a>
+                                        </li>
+                                        <li class="n-item ps-4 me-4 pe-5">
+                                            <a href="#enter" class="nav-links  opacity-07">Activity</a>
+                                        </li>
+                                        <div class="nav-quantum d-flex justify-content-between align-items-center">
+                                            <div class="n-item px-xxl-3   d-flex align-items-center">
+                                                <button
+                                                    class="common-btn border-0 rounded-pill pt-2 px-4 text-white bg-color-black d-flex align-items-center d-none d-md-block">
+                                                    SIGN IN
+                                                </button>
+                                            </div>
+
+                                            <!-- Toggle Button nav -->
+
                                         </div>
-
-                                        <!-- Toggle Button nav -->
-
-                                    </div>
-                                </ul>
+                                    </ul>
+                                </div>
                             </div>
+
 
 
                             <div id="main-menu" class="hamburger-menu d-inline-block d-xl-none">
