hero-section-done

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-    <!-------------- NAVBAR AND HERO SECTION STARTS --------------------->
+    <!-------------- NAVBAR START  --------------------->
     <section class="navbar-section py-3">
         <main class="main-top-section dragon_bg_img position-relative z-index-10">
             <!-- NAVBAR START ----------->
@@ -87,9 +87,10 @@
                                 <img class="nav-logo" src="./assets/images/svg/navlogo.svg" alt="logo" /> </a>
 
                             <div class="d-flex">
-                                <div class="search-input rounded-pill p-2 d-flex  me-sm-5">
+                                <div class="search-input rounded-pill p-2 d-flex  me-sm-5 cursor-pointer">
                                     <img src="./assets/images/svg/search.svg" alt="img">
-                                    <input class="border-0 ps-2 w-100" placeholder="Search..." type="text">
+                                    <input class="border-0 ps-2 w-100 cursor-pointer" placeholder="Search..."
+                                        type="text">
                                 </div>
                                 <div class="nav-items-wrap d-none d-xl-block d-flex ms-3">
                                     <ul class="nav-items-list list-unstyled align-items-center d-flex m-auto">
@@ -135,7 +136,25 @@
             <!-- NAVBAR END ------------->
         </main>
     </section>
-    <!-------------- NAVBAR AND HERO SECTION ENDS ----------------------->
+    <!-------------- NAVBAR END  ----------------------->
+    <!--------------  HERO SECTION START ----------------------->
+    <section class="hero-section mt-4 mx-4">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-12 text-center">
+                    <h1 class="heading text-white font-playfir hero-heading pt-5">"Best New NFT to look out for"</h1>
+                    <p class="para mw-w-600 mx-auto">
+                        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.
+                    </p>
+                </div>
+                <div class="col-8 col-sm-5 col-lg-3 mt-lg-5 mt-4">
+                    <img class="w-100" src="./assets/images/png/hero.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--------------  HERO SECTION ENDS ----------------------->
 
 
 
