--- a/index.html
+++ b/index.html
@@ -156,16 +156,116 @@
     </section>
     <!--------------  HERO SECTION ENDS ----------------------->
 
-
-
+    <!--------------  NFT SECTION START ----------------------->
+    <section>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-12 mt-5 pt-4">
+                    <h1 class="min-heading">
+                        Top NFT to look out for in 2022
+                    </h1>
+                </div>
+                <div class="col-8 col-sm-6 col-md-4 col-lg-auto mt-sm-4 pt-3">
+                    <div class="nft-card py-3 px-2">
+                        <img class="w-100 " src="./assets/images/png/nft.png" alt="img">
+                        <h1 class="fs-md fw-bold my-2">
+                            Bonorum Malorum
+                        </h1>
+                        <div class="d-flex justify-content-between">
+                            <h6 class="fs-xsm fw-bold">
+                                $33,915
+                            </h6>
+                            <h6 class="fs-xsm fw-bold cursor-pointer">
+                                <span><img src="./assets/images/svg/like.svg" alt=""></span> 915
+                            </h6>
+                        </div>
+                        <div class="text-center mt-3">
+                            <button class="rounded-pill buy-btn pt-2 fs-xsm px-3">BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-8 col-sm-6 col-md-4 col-lg-auto mt-4 pt-3">
+                    <div class="nft-card py-3 px-2">
+                        <img class="w-100 " src="./assets/images/png/nft-second.png" alt="img">
+                        <h1 class="fs-md fw-bold my-2">
+                            Bonorum Malorum
+                        </h1>
+                        <div class="d-flex justify-content-between">
+                            <h6 class="fs-xsm fw-bold">
+                                $33,915
+                            </h6>
+                            <h6 class="fs-xsm fw-bold cursor-pointer">
+                                <span><img src="./assets/images/svg/like.svg" alt=""></span> 915
+                            </h6>
+                        </div>
+                        <div class="text-center mt-3">
+                            <button class="rounded-pill buy-btn pt-2 fs-xsm px-3">BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-8 col-sm-6 col-md-4 col-lg-auto mt-4 pt-3">
+                    <div class="nft-card py-3 px-2">
+                        <img class="w-100 " src="./assets/images/png/nft-third.png" alt="img">
+                        <h1 class="fs-md fw-bold my-2">
+                            Bonorum Malorum
+                        </h1>
+                        <div class="d-flex justify-content-between">
+                            <h6 class="fs-xsm fw-bold">
+                                $33,915
+                            </h6>
+                            <h6 class="fs-xsm fw-bold cursor-pointer">
+                                <span><img src="./assets/images/svg/like.svg" alt=""></span> 915
+                            </h6>
+                        </div>
+                        <div class="text-center mt-3">
+                            <button class="rounded-pill buy-btn pt-2 fs-xsm px-3">BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-8 col-sm-6 col-md-4 col-lg-auto mt-4 pt-3">
+                    <div class="nft-card py-3 px-2">
+                        <img class="w-100 " src="./assets/images/png/nft-forth.png" alt="img">
+                        <h1 class="fs-md fw-bold my-2">
+                            Bonorum Malorum
+                        </h1>
+                        <div class="d-flex justify-content-between">
+                            <h6 class="fs-xsm fw-bold">
+                                $33,915
+                            </h6>
+                            <h6 class="fs-xsm fw-bold cursor-pointer">
+                                <span><img src="./assets/images/svg/like.svg" alt=""></span> 915
+                            </h6>
+                        </div>
+                        <div class="text-center mt-3">
+                            <button class="rounded-pill buy-btn pt-2 fs-xsm px-3">BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-8 col-sm-6 col-md-4 col-lg-auto mt-4 pt-3">
+                    <div class="nft-card py-3 px-2">
+                        <img class="w-100 " src="./assets/images/png/nft-fifth.png" alt="img">
+                        <h1 class="fs-md fw-bold my-2">
+                            Bonorum Malorum
+                        </h1>
+                        <div class="d-flex justify-content-between">
+                            <h6 class="fs-xsm fw-bold">
+                                $33,915
+                            </h6>
+                            <h6 class="fs-xsm fw-bold cursor-pointer">
+                                <span><img src="./assets/images/svg/like.svg" alt=""></span> 915
+                            </h6>
+                        </div>
+                        <div class="text-center mt-3">
+                            <button class="rounded-pill buy-btn pt-2 fs-xsm px-3">BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--------------  NFT SECTION ENDS ------------------------>
 
     <a href="#header" id="scroll" style="display: none"><span></span></a>
-    <!-- Optional JavaScript; choose one of the two! -->
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
-    <!-- bootstrap -->
-
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
     </script>
@@ -181,10 +281,6 @@
         integrity="sha512-WNZwVebQjhSxEzwbettGuQgWxbpYdoLf7mH+25A7sfQbbxKeS5SQ9QBf97zOY4nOlwtksgDA/czSTmfj4DUEiQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
-    <script src="https://unpkg.com/tilt.js@1.1.19/dest/tilt.jquery.js"></script>
-
     <!------------------------------ JAVASCRIPT-CODE ------------------------------------------->
     <script>
         AOS.init({
