--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <!--------------  NFT SECTION START ----------------------->
     <section>
         <div class="container">
-            <div class="row justify-content-center">
+            <div class="row justify-content-center   justify-content-xl-between">
                 <div class="col-12 mt-5 pt-4">
                     <h1 class="min-heading">
                         Top NFT to look out for in 2022
@@ -261,11 +261,268 @@
                     </div>
                 </div>
             </div>
+
+            <div class="row mt-5 pt-4">
+                <div class="col-12">
+                    <h1 class="min-heading">
+                        Explore top NFT
+                    </h1>
+                </div>
+                <div class="col-12">
+                    <div class="explor-nft pb-5">
+                        <div class="row mt-5 px-4">
+                            <div class="col-8 mx-auto col-lg-3">
+                                <img class="w-100" src="./assets/images/png/nft-text.png" alt="img">
+                            </div>
+                            <div class="col-12 my-5 my-lg-0 col-lg-9 d-flex flex-column justify-content-center">
+                                <div class="ps-md-4 d-flex flex-column justify-content-center">
+
+
+                                    <h1 class="middium-heading">
+                                        Bonorum Malorum
+                                    </h1>
+                                    <p class="para text-black pe-md-4">
+                                        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                                        nostrud
+                                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                                        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                                        nulla
+                                        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+                                        officia
+                                        deserunt mollit anim id est laborum."
+                                    </p>
+
+                                    <div class="d-flex align-items-center justify-content-between mt-4 pe-4">
+                                        <h6 class="fs-xlg fw-bold opacity-7 mt-3 mt-sm-0">
+                                            $33,915
+                                        </h6>
+                                        <div class="text-center ">
+                                            <button class="rounded-pill buy-btn pt-2 fs-xsm px-3">BUY NOW</button>
+                                        </div>
+                                        <h6 class="fs-xsm fw-bold cursor-pointer opacity-7 mt-3 mt-sm-0">
+                                            <span><img src="./assets/images/svg/like.svg" alt=""></span> 915
+                                        </h6>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="explor-nft mt-3 pb-5">
+                        <div class="row mt-5 px-4">
+                            <div class="col-8 mx-auto col-lg-3">
+                                <img class="w-100" src="./assets/images/png/nft-text-second.png" alt="img">
+                            </div>
+                            <div class="col-12 my-5 my-lg-0 col-lg-9 d-flex flex-column justify-content-center">
+                                <div class="ps-md-4 d-flex flex-column justify-content-center">
+
+
+                                    <h1 class="middium-heading">
+                                        Bonorum Malorum
+                                    </h1>
+                                    <p class="para text-black pe-md-4">
+                                        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                                        nostrud
+                                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                                        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                                        nulla
+                                        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+                                        officia
+                                        deserunt mollit anim id est laborum."
+                                    </p>
+
+                                    <div class="d-flex align-items-center justify-content-between mt-4 pe-4">
+                                        <h6 class="fs-xlg fw-bold opacity-7 mt-3 mt-sm-0">
+                                            $33,915
+                                        </h6>
+                                        <div class="text-center ">
+                                            <button class="rounded-pill buy-btn pt-2 fs-xsm px-3">BUY NOW</button>
+                                        </div>
+                                        <h6 class="fs-xsm fw-bold cursor-pointer opacity-7 mt-3 mt-sm-0">
+                                            <span><img src="./assets/images/svg/like.svg" alt=""></span> 915
+                                        </h6>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="explor-nft mt-3 pb-5">
+                        <div class="row mt-5 px-4">
+                            <div class="col-8 mx-auto col-lg-3">
+                                <img class="w-100" src="./assets/images/png/nft-text-third.png" alt="img">
+                            </div>
+                            <div class="col-12 my-5 my-lg-0 col-lg-9 d-flex flex-column justify-content-center">
+                                <div class="ps-md-4 d-flex flex-column justify-content-center">
+
+
+                                    <h1 class="middium-heading">
+                                        Bonorum Malorum
+                                    </h1>
+                                    <p class="para text-black pe-md-4">
+                                        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                        tempor
+                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                                        nostrud
+                                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+                                        aute
+                                        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                                        nulla
+                                        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+                                        officia
+                                        deserunt mollit anim id est laborum."
+                                    </p>
+
+                                    <div class="d-flex align-items-center justify-content-between mt-4 pe-4">
+                                        <h6 class="fs-xlg fw-bold opacity-7 mt-3 mt-sm-0">
+                                            $33,915
+                                        </h6>
+                                        <div class="text-center ">
+                                            <button class="rounded-pill buy-btn pt-2 fs-xsm px-3">BUY NOW</button>
+                                        </div>
+                                        <h6 class="fs-xsm fw-bold cursor-pointer opacity-7 mt-3 mt-sm-0">
+                                            <span><img src="./assets/images/svg/like.svg" alt=""></span> 915
+                                        </h6>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="explor-nft mt-3 pb-5">
+                        <div class="row mt-5 px-4">
+                            <div class="col-8 mx-auto col-lg-3">
+                                <img class="w-100" src="./assets/images/png/nft-text-foth.png" alt="img">
+                            </div>
+                            <div class="col-12 my-5 my-lg-0 col-lg-9 d-flex flex-column justify-content-center">
+                                <div class="ps-md-4 d-flex flex-column justify-content-center">
+
+
+                                    <h1 class="middium-heading">
+                                        Bonorum Malorum
+                                    </h1>
+                                    <p class="para text-black pe-md-4">
+                                        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                        tempor
+                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                                        nostrud
+                                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+                                        aute
+                                        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                                        nulla
+                                        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+                                        officia
+                                        deserunt mollit anim id est laborum."
+                                    </p>
+
+                                    <div class="d-flex align-items-center justify-content-between mt-4 pe-4">
+                                        <h6 class="fs-xlg fw-bold opacity-7 mt-3 mt-sm-0">
+                                            $33,915
+                                        </h6>
+                                        <div class="text-center ">
+                                            <button class="rounded-pill buy-btn pt-2 fs-xsm px-3">BUY NOW</button>
+                                        </div>
+                                        <h6 class="fs-xsm fw-bold cursor-pointer opacity-7 mt-3 mt-sm-0">
+                                            <span><img src="./assets/images/svg/like.svg" alt=""></span> 915
+                                        </h6>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="explor-nft mt-3 pb-5">
+                        <div class="row mt-5 px-4">
+                            <div class="col-8 mx-auto col-lg-3">
+                                <img class="w-100" src="./assets/images/png/nft-text-fifth.png" alt="img">
+                            </div>
+                            <div class="col-12 my-5 my-lg-0 col-lg-9 d-flex flex-column justify-content-center">
+                                <div class="ps-md-4 d-flex flex-column justify-content-center">
+
+
+                                    <h1 class="middium-heading">
+                                        Bonorum Malorum
+                                    </h1>
+                                    <p class="para text-black pe-md-4">
+                                        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                        tempor
+                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                                        nostrud
+                                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+                                        aute
+                                        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                                        nulla
+                                        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+                                        officia
+                                        deserunt mollit anim id est laborum."
+                                    </p>
+
+                                    <div class="d-flex align-items-center justify-content-between mt-4 pe-4">
+                                        <h6 class="fs-xlg fw-bold opacity-7 mt-3 mt-sm-0">
+                                            $33,915
+                                        </h6>
+                                        <div class="text-center ">
+                                            <button class="rounded-pill buy-btn pt-2 fs-xsm px-3">BUY NOW</button>
+                                        </div>
+                                        <h6 class="fs-xsm fw-bold cursor-pointer opacity-7 mt-3 mt-sm-0">
+                                            <span><img src="./assets/images/svg/like.svg" alt=""></span> 915
+                                        </h6>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
     </section>
-    <!--------------  NFT SECTION ENDS ------------------------>
+    <!--------------  NFT CAROUSEL START ------------------------>
+    <section>
+        <div class="container">
+            <div class="row mt-5 pt-4">
+                <div class="col-12">
+                    <h1 class="min-heading">
+                        Top NFT Market places
+                    </h1>
+                </div>
+            </div>
+
+            <div class="multiple-items mt-5">
+                <div class="carousel-card text-center p-5 h-100 ">
+                    <img class="w-75 mx-auto" src="./assets/images/png/carousel-nft.png" alt="">
+                </div>
+                <div class="carousel-card text-center p-5 h-100">
+                    <img class="w-75 mx-auto" src="./assets/images/png/t_rarible5951 1.png" alt="">
+                </div>
+                <div class="carousel-card text-center p-5 h-258">
+                    <img class="w-75 mx-auto pt-5" src="./assets/images/png/superrare-featured 1.png" alt="">
+                </div>
+                <div class="carousel-card text-center p-5 h-258">
+                    <img class="w-75 mx-auto pt-5" src="./assets/images/png/trangle.png" alt="">
+                </div>
+                <div class="carousel-card text-center p-5 h-100">
+                    <img class="w-75 mx-auto" src="./assets/images/png/t_rarible5951 1.png" alt="">
+                </div>
+                <div class="carousel-card text-center p-5 h-258">
+                    <img class="w-75 mx-auto pt-5" src="./assets/images/png/superrare-featured 1.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--------------  NFT CAROUSEL ENDS ------------------------>
 
     <a href="#header" id="scroll" style="display: none"><span></span></a>
+
+    <!-- SLICK-link-js -->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
+    <!-- bootstrap -->
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
     </script>
@@ -281,6 +538,9 @@
         integrity="sha512-WNZwVebQjhSxEzwbettGuQgWxbpYdoLf7mH+25A7sfQbbxKeS5SQ9QBf97zOY4nOlwtksgDA/czSTmfj4DUEiQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+    <script src="https://unpkg.com/tilt.js@1.1.19/dest/tilt.jquery.js"></script>
     <!------------------------------ JAVASCRIPT-CODE ------------------------------------------->
     <script>
         AOS.init({
@@ -290,8 +550,7 @@
     <!------------------------------ JAVASCRIPT-CODE ------------------------------------------->
     <script>
         $(".multiple-items").slick({
-            nextArrow: '<button id="next-icon"> </button> ',
-            prevArrow: '<button id="previous-icon"> </button> ',
+            arrows: true,
             infinite: true,
             dots: false,
             slidesToShow: 4,
@@ -325,7 +584,7 @@
                     settings: {
                         arrows: false,
                         dots: true,
-                        slidesToShow: 2,
+                        slidesToShow: 1,
                     },
                 },
             ],
