--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     </section>
     <!--------------  HERO SECTION ENDS ----------------------->
     <!--------------  NFT SECTION START ----------------------->
-    <section class=" overflow-x-hidden">
+    <section class=" overflow-x-hidden ">
         <div class="container" id="profile">
             <div class="row justify-content-center justify-content-xl-between">
                 <div class="col-12 mt-5 pt-4">
@@ -257,7 +257,7 @@
                 </div>
             </div>
         </div>
-        <div class="container" id="explore">
+        <div class="container " id="explore">
             <div class="row mt-5 pt-4 ">
                 <div class="col-12">
                     <h1 class="min-heading mb-5" data-aos="fade-right" data-aos-duration="2000">
@@ -421,7 +421,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="explor-nft pb-sm-3 mt-3" data-aos="fade-left" data-aos-duration="2000">
+                    <div class="explor-nft pb-sm-3 mt-3 mb-3" data-aos="fade-left" data-aos-duration="2000">
                         <div class="d-lg-flex mt-3 text-center text-lg-start px-4">
                             <div class="w-lg-75 w-100 mx-auto ">
                                 <img class="w-100 nft-img" src="./assets/images/png/nft-text-fifth.png" alt="img">
