--- a/index.html
+++ b/index.html
@@ -519,8 +519,8 @@
             </div>
         </div>
         <div class="d-flex flex-column align-items-center px-2 mt-4 pt-2">
-            <div class="nav  nav-pills me-3 justify-content-center mb-4" data-aos="fade-right" data-aos-duration="2000"
-                id="v-pills-tab" role="tablist" aria-orientation="vertical">
+            <div class="nav  nav-pills me-3 justify-content-md-center mb-4" data-aos="fade-right"
+                data-aos-duration="2000" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                 <button class="nav-link mb-3 active" id="v-pills-home-tab" data-bs-toggle="pill"
                     data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home"
                     aria-selected="true">Sport</button>
